--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,44 +1,39 @@
-# Logs
-logs
-*.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+/test-results
+/playwright-report
+/playwright/.cache
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# Dependencies
-node_modules
-
-# Next.js
-.next
-out
-build
-dist
-dist-ssr
-
-# Environment
-*.local
+# local env files
+.env*.local
 .env
-.env.local
-.env.production.local
-.env.development.local
 
-# Testing
-coverage
-.nyc_output
+# vercel
+.vercel
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# TypeScript
+# typescript
 *.tsbuildinfo
 next-env.d.ts
