--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "autoprefixer": "^10.4.23",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
-    "tailwindcss": "^4.1.18",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.7.2"
   }
 }
